<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/splash_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10dp"
            android:text="@string/user_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal" />

        <EditText
            android:id="@+id/edUserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_info_tab_height"
            android:layout_marginTop="@dimen/padding_5dp"
            android:background="@drawable/bg_edit_text_account"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/edPassword"
            android:paddingLeft="@dimen/padding_10dp"
            android:paddingRight="@dimen/padding_5dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10dp"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_info_tab_height"
            android:layout_marginTop="@dimen/padding_5dp"
            android:background="@drawable/bg_edit_text_account"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/edRePassword"
            android:paddingLeft="@dimen/padding_10dp"
            android:paddingRight="@dimen/padding_5dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10dp"
            android:text="@string/re_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal" />

        <EditText
            android:id="@+id/edRePassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_info_tab_height"
            android:layout_marginTop="@dimen/padding_5dp"
            android:background="@drawable/bg_edit_text_account"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/edCaptcha"
            android:paddingLeft="@dimen/padding_10dp"
            android:paddingRight="@dimen/padding_5dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10dp"
            android:text="@string/xacnhan"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_5dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_captcha"
                android:background="@color/account_no_img" >

                <ImageView
                    android:id="@+id/imgCaptcha"
                    android:layout_width="@dimen/width_button"
                    android:layout_height="@dimen/height_captcha"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@drawable/no_image_captcha" />

                <ProgressBar
                    android:id="@+id/progressLoad"
                    android:layout_width="@dimen/player_info_tab_height"
                    android:layout_height="@dimen/player_info_tab_height"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/imvRefreshCaptcha"
                android:layout_width="@dimen/player_info_tab_height"
                android:layout_height="@dimen/player_info_tab_height"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/splash_padding"
                android:background="@drawable/button_selector"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/padding_5dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_refresh" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10dp"
            android:text="@string/nhapmaxacnhan"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal" />

        <EditText
            android:id="@+id/edCaptcha"
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_info_tab_height"
            android:layout_marginTop="@dimen/padding_5dp"
            android:background="@drawable/bg_edit_text_account"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/padding_10dp"
            android:paddingRight="@dimen/padding_5dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal" />

        <Button
            android:id="@+id/btRegis"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/player_info_tab_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_20dp"
            android:background="@drawable/bg_button_account"
            android:gravity="center"
            android:text="@string/regis"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/player_info_tab_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_10dp"
            android:background="@drawable/bg_button_account"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

</ScrollView>