<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_list_match_schedule_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="@dimen/padding_10dp"
                android:paddingLeft="@dimen/padding_10dp"
                android:paddingRight="@dimen/padding_10dp"
                android:background="@drawable/background_rounded_corner"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/event_select_title"/>

            </LinearLayout>

            <Spinner
                    android:id="@+id/fragment_list_match_schedule_spinner_league"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginLeft="@dimen/padding_10dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10dp"
                android:layout_marginTop="@dimen/padding_10dp"
                android:background="@drawable/background_rounded_corner"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/padding_10dp"
                    android:paddingRight="@dimen/padding_10dp"
                    android:paddingTop="2dp"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/fragment_list_match_schedule_league_ongoing_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:src="@drawable/com_facebook_place_default_icon"/>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/fragment_list_match_schedule_league_ongoing"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="@dimen/padding_10dp"
                            android:text="ENGLISH PREMIER LEAGUE"/>
                </LinearLayout>


            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_10dp"
                    android:paddingBottom="@dimen/padding_10dp"
                    android:paddingLeft="@dimen/padding_10dp"
                    android:paddingRight="@dimen/padding_10dp"
                    android:background="@color/list_header_background"
                    android:text="@string/event_schedule"/>

            <mdn.vtvpluspro.common.ExpandableHeightListView
                    android:id="@+id/fragment_list_match_schedule_league_ongoing_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fadingEdge="none"
                    android:focusable="false"
                    android:scrollbars="none"
                    android:paddingLeft="@dimen/padding_10dp"
                    android:paddingRight="@dimen/padding_10dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10dp"
                android:layout_marginTop="@dimen/padding_10dp"
                android:layout_marginBottom="@dimen/padding_20dp"
                android:background="@drawable/background_rounded_corner"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/padding_10dp"
                    android:paddingRight="@dimen/padding_10dp"
                    android:paddingTop="2dp"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/fragment_list_match_schedule_league_past_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:src="@drawable/com_facebook_place_default_icon"/>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/fragment_list_match_schedule_league_past"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="@dimen/padding_10dp"
                            android:text="ENGLISH PREMIER LEAGUE"/>
                </LinearLayout>


            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_10dp"
                    android:paddingBottom="@dimen/padding_10dp"
                    android:paddingLeft="@dimen/padding_10dp"
                    android:paddingRight="@dimen/padding_10dp"
                    android:background="@color/list_header_background"
                    android:text="@string/event_result"/>

            <mdn.vtvpluspro.common.ExpandableHeightListView
                    android:id="@+id/fragment_list_match_schedule_league_past_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fadingEdge="none"
                    android:focusable="false"
                    android:scrollbars="none"
                    android:paddingLeft="@dimen/padding_10dp"
                    android:paddingRight="@dimen/padding_10dp"/>

        </LinearLayout>

        <include layout="@layout/layout_event_footer"/>

    </LinearLayout>

</ScrollView>